--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==2.2
+gunicorn==19.9.0
 Pillow==6.0.0
+pkg-resources==0.0.0
 psycopg2==2.8
 psycopg2-binary==2.8
 pytz==2018.9
-
+sqlparse==0.3.0
